public static String currentUsersHomeDir = System.getProperty("user.dir" );